2014-07-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/UcdSnmp.pm: Loopback interfaces
	filtered out

2014-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC4293_IP_MIB.pm: New params:
	RFC4293_IP_MIB::tokenset-members,
	RFC4293_IP_MIB::ipv4-external-serviceid,
	RFC4293_IP_MIB::ipv6-external-serviceid,
	New selector action: TokensetMember

2014-05-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm: Improved interface
	indexing for unknown devices. New parameters:
	RFC2863_IF_MIB::name-hint
	RFC2863_IF_MIB::comment-hint

2014-05-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: new discovery parameter:
	CiscoIOS::ifindex-persist

2014-04-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC4293_IP_MIB.pm: new discovery
	module for IPv4/IPv6 traffic stats

2014-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm (discover):
	64-bit gauges for Cisco memory pools

2014-02-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree/Writer.pm (initRoot): new parameter:
	tree-name automatically inserted to the top of the tree

2013-04-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.07

2013-02-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.06

	* perllib/Torrus/Collector/SNMP.pm (isMapReady): new function:
	isMapReady(), removed function: activeMappingSessions()

2012-10-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/action_snmpv1trap.in, bin/action_snmptrap.in:
	$ENV{'TORRUS_SEVERITY'} is now treated properly

2012-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/F5BigIp.pm: New implementation for F5
	BigIP support
